# pymtcnn_facedetector

./: CMakeLists.txt
example-app/: main.cpp
pydetector_mtcnn/: CMakeLists.txt  detector.py
pydetector_mtcnn/cpp/: facedetector_pybind.cpp
src/: imgProcess.cpp  mtcnn.cpp  mtcnn.h  net.h
